<resources>
    <string name="app_name">Student Companion App</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="enter_e_mail">ENTER E-MAIL</string>
    <string name="welcome">WELCOME</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="registerHere">REGISTER HERE</string>
    <string name="register">REGISTER</string>
    <string name="welcome_user">WELCOME</string>
    <string name="message">MESSAGE</string>
    <string name="phone">PHONE</string>
    <string name="browser">BROWSER</string>
    <string name="instagram">INSTAGRAM</string>
    <string name="facebook">FACEBOOK</string>
    <string name="log_out">Log Out</string>
    <string name="enter_name">ENTER NAME</string>
    <string name="enter_registraiton_no">ENTER REGISTRAITON NO</string>
    <string name="title_activity_todo">todo</string>
    <string name="tab_text_1">TODOS</string>
    <string name="tab_text_2">Homework</string>
    <string name="tab_text_3">Projects</string>
    <string name="office">OFFICE</string>
    <string name="comingSoon">WILL BE UPLOADED SOON!</string>
    <string name="academic_nsection">Academic\nSection</string>
    <string name="calculator">Calculator</string>
    <string name="voice_nrecorder">Voice\nRecorder</string>
    <string name="syllabus">Syllabus</string>
    <string name="time_table">Time Table</string>
    <string name="library_fine_ncalculator">Library Fine\nCalculator</string>
    <string name="to_do">To Do</string>
    <string name="academic_section">ACADEMIC SECTION</string>
    <string name="prof_p_k_parhi_pic_academics">Prof. P.K. Parhi, PIC, Academics</string>
    <string name="ph_9437176889">Ph:-9437176889</string>
    <string name="email_picacademics_cet_edu_in">Email:- picacademics@cet.edu.in</string>
    <string name="office_hours_9_30_am_1_30_pm">Office Hours:- 9:30 AM-1:30 PM</string>
    <string name="_1_30_pm_4_30_pm">1:30 PM-4:30 PM</string>
    <string name="online_payment">ONLINE PAYMENT</string>
    <string name="download_fee_structure">DOWNLOAD FEE STRUCTURE</string>
    <string name="backpaper_registration">BACKPAPER REGISTRATION</string>
    <string name="retrieve_backpaper_registration_details">RETRIEVE BACKPAPER REGISTRATION DETAILS</string>
    <string name="registration_details_here">Registration Details Here</string>
    <string name="backpaper_registration_form">Backpaper Registration Form</string>
    <string name="name_of_department">Name of Department</string>
    <string name="name_of_student">Name of Student</string>
    <string name="registration_no">Registration No.</string>
    <string name="cgpa">CGPA</string>
    <string name="phone_no">Phone No.</string>
    <string name="e_mail">E-mail</string>
    <string name="subjects">SUBJECTS</string>
    <string name="subject_code">Subject Code</string>
    <string name="subject_name">Subject Name</string>
    <string name="credit">Credit</string>
    <string name="payment_details_rs">Payment Details(Rs.)</string>
    <string name="date_dd_mm_yy">Date(DD/MM/YY)</string>
    <string name="submit">SUBMIT</string>
    <string name="timetable">Timetable</string>
    <string name="library_fine_calculator">LIBRARY FINE CALCULATOR</string>
    <string name="current_date">CURRENT DATE:</string>
    <string name="due_date">DUE DATE:</string>
    <string name="days_past_due">DAYS PAST DUE:</string>
    <string name="fine_per_day">FINE (PER DAY):</string>
    <string name="in_rs">(in Rs.)</string>
    <string name="total_fine">TOTAL FINE:</string>
    <string name="google_maps_api_key">AIzaSyAYTZt3smwK95g_Uw_uXzY8YNQiI7Ryo5M</string>
    <string-array name="Week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="Monday">
        <item>Observational Behaviour</item>
        <item>Design and Analysis of Algorithms</item>
        <item>Database Management System</item>
        <item>Break</item>
        <item>COA LAB IT 1/DAA LAB IT 2</item>
    </string-array>
    <string-array name="Tuesday">
        <item>Environmental Science</item>
        <item>Discrete Mathematics</item>
        <item>Database Management System</item>
        <item>Break</item>
        <item>Computer Organization and Architecture</item>
        <item>Observational Behaviour</item>

    </string-array>
    <string-array name="Wednesday">
        <item>Design and Analysis of Algorithms</item>
        <item>Database Management System</item>
        <item>Break</item>
        <item>DMS LAB IT 2/DAA LAB IT 1</item>

    </string-array>
    <string-array name="Thursday">
        <item>Design and Analysis of Algorithms</item>
        <item>Discrete Mathematics</item>
        <item>Computer Organization and Architecture</item>
        <item>Break</item>
        <item>DMS LAB IT 1/COA LAB IT 2</item>

    </string-array>
    <string-array name="Friday">
        <item>Design and Analysis of Algorithms</item>
        <item>Observational Behaviour</item>
        <item>Discrete Mathematics</item>
        <item>Break</item>
        <item>Computer Organization and Architecture</item>
        <item>Environmental Science</item>

    </string-array>
    <string-array name="Saturday">
        <item>SITE VISIT/INVITED SPEAKER/SEMINAR/LIBRARY/MOOCS</item>


    </string-array>
    <string-array name="time1">
        <item>9:30 – 10:30 AM</item>
        <item>10:30 – 11:30 AM</item>
        <item>11:30 AM - 12:30 PM</item>
        <item>12:30 – 1:30 PM</item>
        <item>1:30 – 4:30 PM</item>
    </string-array>
    <string-array name="time2">
        <item>9:30 – 10:30 AM</item>
        <item>10:30 – 11:30 AM</item>
        <item>11:30 AM - 12:30 PM</item>
        <item>12:30 – 1:30 PM</item>
        <item>1:30 – 2:30 PM</item>
        <item>2:30 – 3:30 PM</item>
    </string-array>
    <string-array name="time3">
        <item>10:30 – 11:30 AM</item>
        <item>11:30 AM - 12:30 PM</item>
        <item>12:30 – 1:30 PM</item>
        <item>1:30 – 4:30 PM</item>
    </string-array>
    <string-array name="time4">
        <item>9:30 – 10:30 AM</item>
        <item>10:30 – 11:30 AM</item>
        <item>11:30 AM - 12:30 PM</item>
        <item>12:30 – 1:30 PM</item>
        <item>1:30 – 4:30 PM</item>
    </string-array>
    <string-array name="time5">
        <item>9:30 – 10:30 AM</item>
        <item>10:30 – 11:30 AM</item>
        <item>11:30 AM - 12:30 PM</item>
        <item>12:30 – 1:30 PM</item>
        <item>1:30 – 2:30 PM</item>
        <item>2:30 – 3:30 PM</item>
    </string-array>
    <string-array name="time6">
        <item>9:30 AM - 4:30 PM</item>

    </string-array>
    <string-array name="Semesters">
        <item>1st Semester</item>
        <item>2nd Semester</item>
        <item>3rd Semester</item>
        <item>4th Semester</item>
        <item>5th Semester</item>
        <item>6th Semester</item>
        <item>7th Semester</item>
        <item>8th Semester</item>
    </string-array>
    <string-array name="FirstSemester">
        <item>CHEMISTRY</item>
        <item>MATHEMATICS-I</item>
        <item>PROGRAMMING FOR PROBLEM SOLVING</item>
        <item>CHEMISTRY LAB</item>
        <item>PROGRAMMING FOR PROBLEM SOLVING LAB</item>
        <item>ENGINEERING GRAPHICS AND DESIGN LAB</item>
    </string-array>
    <string-array name="SecondSemester">
        <item>PHYSICS</item>
        <item>MATHEMATICS-II</item>
        <item>BASIC ELECTRICAL ENGG.</item>
        <item>ENGLISH</item>
        <item>PHYSICS LAB</item>
        <item>BASIC ELECTRICAL ENGG. LAB</item>
        <item>WORK SHOP/BASIC MANUFACTURING PROCESS LAB</item>

    </string-array>
    <string-array name="ThirdSemester">
        <item>OBJECT ORIENTED PROGRAMMING USING JAVA</item>
        <item>DATA STRUCTURES USING C</item>
        <item>FORMAL LANGUAGE AND AUTOMATA THOERY</item>
        <item>DIGITAL ELECTRONICS</item>
        <item>MATHEMATICS-III</item>
        <item>ENGINEERING ECONOMICS</item>
        <item>JAVA LAB</item>
        <item>DATA STRUCTURES LAB</item>
    </string-array>
    <string-array name="FourthSemester">
        <item>DESIGN AND ANALYSIS OF ALGORITHMS</item>
        <item>DISCRETE MATHEMATICS</item>
        <item>DATABASE MANAGEMENT SYSTEM</item>
        <item>COMPUTER ORGANIZATION AND BEHAVIOUR</item>
        <item>ORGANIZATIONAL BEHAVIOUR</item>
        <item>ENVIRONMENTAL STUDIES</item>
        <item>DAA LAB</item>
        <item>DMS LAB</item>
        <item>COA LAB</item>

    </string-array>
    <string-array name="FifthSemester">
        <item>OPERATING SYSTEM</item>
        <item>COMPUTER NETWORKS</item>
        <item>COMPILER DESIGN</item>
        <item>ARTIFICIAL INTELLIGENCE</item>
        <item>E-COMMERCE AND ERP</item>
        <item>ADVANCED JAVA</item>
        <item>ADVANCED COMPUTER ARCHITECTURE</item>
        <item>OS LAB</item>
        <item>COMPUTER NETWORKS LAB</item>
        <item>COMPILER DESIGN LAB</item>

    </string-array>
    <string-array name="SixthSemester">
        <item>INTERNET AND WEB TECHNOLOGY</item>
        <item>SOFTWARE ENGINEERING</item>
        <item>DATA MINING</item>
        <item>DATA ANALYTICS</item>
        <item>COMPUTER VISION</item>
        <item>CLOUD COMPUTING</item>
        <item>COMPUTER GRAPHICS</item>
        <item>SOFT COMPUTING</item>
        <item>IWT LAB</item>
        <item>SOFTWARE ENGINEERING LAB</item>
        <item>SIMULATION LAB</item>
    </string-array>
    <string-array name="SeventhSemester">
        <item>MOBILE COMPUTING</item>
        <item>REAL TIME SYSTEMS</item>
        <item>WIRELESS SENSOR NETWORK</item>
        <item>FAULT TOLERANT SYSTEMS</item>
        <item>SOFTWARE PROJECT MANAGEMENT</item>
        <item>INFORMATION RETRIEVAL</item>
        <item>ENTREPRENEURSHIP DEVELOPMENT</item>

    </string-array>
    <string-array name="EightSemester">
        <item>MACHINE LEARNING</item>
        <item>EMBEDDED SYSTEM</item>
        <item>INTRUSION DETECTION SYSTEMS</item>
    </string-array>
</resources>