<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#039BE5"
    android:gravity="center_horizontal"
    tools:context=".LibraryFine">

    <TextView
        android:id="@+id/libraryheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_fine_calculator"
        android:textSize="20dp"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:fontFamily="@font/sweetunicorn"
        android:background="@drawable/heading_background"

        android:layout_marginTop="30dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:background="@drawable/heading_background"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/currentdateheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/current_date"
            android:textSize="20dp"
            android:textColor="#000000"
            android:fontFamily="@font/sweetunicorn"
            />

        <TextView
            android:id="@+id/currentdate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/currentdateheading"
            android:textSize="20dp"
            android:textColor="#000000"
            android:fontFamily="@font/sweetunicorn"/>

        <TextView
            android:id="@+id/duedateheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/due_date"
            android:layout_below="@id/fineheading"
            android:textSize="20dp"
            android:textColor="#000000"
            android:fontFamily="@font/sweetunicorn"/>

        <TextView
            android:id="@+id/duedate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@id/duedateheading"
            android:layout_below="@id/fine"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_alignBottom="@id/duedateheading"
            android:fontFamily="@font/sweetunicorn"/>

        <Button
            android:id="@+id/pickdate"
            android:background="@drawable/pickdatebackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PICK DATE"
            android:layout_below="@id/fine"
            android:layout_toEndOf="@id/duedate"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/sweetunicorn"/>

        <TextView
            android:id="@+id/dayspastdueheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_past_due"
            android:layout_below="@id/duedateheading"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:fontFamily="@font/sweetunicorn"/>

        <TextView
            android:id="@+id/dayspastdue"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/pickdate"
            android:layout_toRightOf="@id/dayspastdueheading"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textColor="#000000"
            android:fontFamily="@font/sweetunicorn"
            />

        <TextView
            android:id="@+id/fineheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fine_per_day"
            android:layout_below="@id/currentdateheading"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:textColor="#000000"
            android:fontFamily="@font/sweetunicorn"
            />

        <EditText
            android:id="@+id/fine"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:fontFamily="@font/sweetunicorn"
            android:layout_toRightOf="@id/fineheading"
            android:layout_below="@id/currentdate"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:hint="@string/in_rs"
            android:layout_alignBottom="@id/fineheading"
            android:textColorHint="#72706d"/>

        <TextView
            android:id="@+id/totalfineheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_fine"
            android:layout_below="@id/dayspastdueheading"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:textColor="#000000"
            android:fontFamily="@font/sweetunicorn"/>

        <TextView
            android:id="@+id/totalfine"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/heading_background"
            android:layout_below="@id/dayspastdue"
            android:layout_toRightOf="@id/totalfineheading"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:textColor="#000000"
            android:fontFamily="@font/sweetunicorn"
            android:layout_alignBottom="@id/totalfineheading"/>

    </RelativeLayout>

</RelativeLayout>